--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="js/index.js" type="module"></script>
+  <link rel="shortcut icon" href="./media/pokemon.ico" type="image/x-icon">
   <title>Pokemon Challenge</title>
 </head>
 
